cmake_minimum_required(VERSION 3.25.0)

set(SANDBOX_CUDA ${PROJECT_PREFIX}Cuda)

set(SANDBOX_CUDA_SOURCES   ${CMAKE_CURRENT_SOURCE_DIR}/add.cu)
add_executable(${SANDBOX_CUDA}${PROJECT_TARGET_SUFFIX} ${SANDBOX_CUDA_SOURCES})
set_target_properties(${SANDBOX_CUDA}${PROJECT_TARGET_SUFFIX} PROPERTIES FOLDER "SandBox")