cmake_minimum_required(VERSION 3.21.7)

set(TOOL_NAME ${PROJECT_PREFIX}Hex2Bin)

set(TOOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/hex_to_bin.cc)
message("CMAKE_CURRENT_BINARY_DIR is ${CMAKE_CURRENT_BINARY_DIR}")
add_executable(${TOOL_NAME}${PROJECT_TARGET_SUFFIX} ${TOOL_SOURCES})
set_target_properties(${TOOL_NAME}${PROJECT_TARGET_SUFFIX} PROPERTIES FOLDER "Tools")